# er-triage-env

./: .gitignore  DEPLOY.md  Dockerfile  README.md  __init__.py  client.py  dashboard.html  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scores.json  validate.py
.github/workflows/: ci.yml
server/: __main__.py  app.py  environment.py  models.py
src/: agent.py  features.py  train.py
src/core/: env_server.py  http_env_client.py
src/envs/er_triage/: __init__.py  client.py  models.py
src/envs/er_triage/graders/: graders.py
src/envs/er_triage/server/: app.py  environment.py
tests/: test_environment.py
